src/ui/snapshots/chatatui__ui__tests__gguf_picker_lists_the_files_of_a_repository.snap
---
source: src/ui/mod.rs
assertion_line: 666
expression: "draw(&mut app, 80, 14).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                    chatatui                                    "
"      ╭ Télécharger un modèle ───────────────────────────────────────────╮      "
"      │ unsloth/Qwen3-0.6B-GGUF                                          │      "
"      │ Tapez pour filtrer…                                              │      "
"      │                                                                  │      "
"      │ Qwen3-0.6B-Q4_K_M.gguf                                    397 Mo │      "
"      │▌Qwen3-0.6B-Q8_0.gguf                                      609 Mo │      "
"╭ Mess╰────────────────────────────── Entrée télécharger · Échap annuler ╯─────╮"
"│ Écrivez votre message…                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" ● Prêt │ Ollama › llama3.2          ↑↓ choisir · Entrée valider · Échap fermer "
