src/ui/snapshots/chatatui__ui__tests__help_screen.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 80, 26).backend()"
---
"                                                                                "
"  ╭ Aide ────────────────────────────────────────────────────────────────────╮  "
"  │ Commandes (tapez / ou Ctrl+P)                                            │  "
"  │  /new                       Nouvelle conversation  (Ctrl+N)              │  "
"  │  /history                   Liste des conversations  (Ctrl+L)            │  "
"  │  /model [nom]               Choisir le modèle (ou le nommer directement) │  "
"  │                             (F2)                                         │  "
"  │  /context                   Taille du contexte et détail                 │  "
"  │  /prompt                    Voir exactement ce qui part au modèle        │  "
"  │  /add <fichier|url>         Joindre au contexte un fichier, une image ou │  "
"  │                             une page web                                 │  "
"  │  /clear                     Vider le contexte (l'historique reste        │  "
"  │                             affiché)                                     │  "
"  │  /compact                   Résumer l'historique pour libérer le contexte│  "
"  │  /index <dossier> [nom]     Indexer un dossier (--types pdf,md pour      │  "
"  │                             filtrer)                                     │  "
"  │  /collections               Collections de documents indexées            │  "
"  │  /rag <collection>[,…]|off  Répondre à partir d'une collection de        │  "
"  │                             documents                                    │  "
"  │  /forget <collection>       Supprimer une collection (pas vos fichiers)  │  "
"  │  /rename <titre>            Renommer la conversation (Ctrl+R dans la     │  "
"  │                             liste)                                       │  "
"╭ │  /delete                    Supprimer la conversation (Suppr dans la     │─╮"
"│ │                             liste)                                       │ │"
"╰─╰──────────────────────────────────────────────────── 22/48 · Échap fermer ╯─╯"
" ● Prêt │ Ollama › llama3.2                 ↑↓ PgUp PgDn défiler · Échap fermer "
