src/ui/snapshots/chatatui__ui__tests__markdown_reply.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 60, 22).backend()"
---
"                                                            "
"        Comment trier un Vec ?                              "
"                                                            "
"✳ Tri en Rust                                               "
"  ───────────                                               "
"                                                            "
"  Utilise sort_unstable si l'ordre des égaux n'importe      "
"  pas :                                                     "
"                                                            "
"    rust                                                    "
"      let mut v = vec![3, 1, 2];                            "
"      v.sort_unstable();                                    "
"                                                            "
"  · plus rapide                                             "
"  · pas d'allocation                                        "
"                                                            "
"                                                            "
"                                                            "
"── Message ─────────────────────────────────────────────────"
"  Écrivez votre message…                                    "
"                                                            "
" ● Prêt │ Ollama › llama3.2 │ ctx ≈81  / commandes · Ctrl+P "
