src/ui/snapshots/chatatui__ui__tests__model_picker_error.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 14).backend()"
---
"                                                                      "
"                                                                      "
"                                                                      "
"                               chatatui                               "
"   ╭ Modèle ──────────────────────────────────────────────────────╮   "
"   │ Tapez pour filtrer…                                          │   "
"   │                                                              │   "
"  T│ Aucun modèle disponible.                                     │e. "
"   │                                                              │   "
"   │ ✖ Ollama injoignable sur http://localhost:11434/v1           │   "
"── ╰─────────────────────────────── Entrée choisir · Échap fermer ╯───"
"  Écrivez votre message…                                              "
"                                                                      "
" ● Prêt │ Ollama › llama3.2                              Échap fermer "
