src/ui/snapshots/chatatui__ui__tests__model_picker_with_filter.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 70, 14).backend()"
---
"                                                                      "
"                                                                      "
"   ╭ Modèle ──────────────────────────────────────────────────────╮   "
"   │ Filtre : lla▏                                                │   "
"   │                                                              │   "
"   │ ●   Ollama  llama3.2                                         │   "
"   │▌    Ollama  llama3.1:70b                                     │   "
"  T│     Ollama  qwen2.5:7b                                       │e. "
"   │   ☁ Claude  claude-llama-fan  200k                           │   "
"   │                                                              │   "
"╭ M│ ✖ OpenAI : clé API absente (définissez la variable OPENAI_AP…│──╮"
"│ É╰─────────────────────────────── Entrée choisir · Échap fermer ╯  │"
"╰────────────────────────────────────────────────────────────────────╯"
" ● Prêt │ Ollama › llama3.2                              Échap fermer "
