src/ui/snapshots/chatatui__ui__tests__models_popup_lists_what_is_downloaded.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 80, 22).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"  ╭ Modèles ─────────────────────────────────────────────────────────────────╮  "
"  │ Tapez pour filtrer…                                                      │  "
"  │                                                                          │  "
"  │▌● unsloth/Qwen3-0.6B-GGUF                                Q4_K_M · 397 Mo │  "
"  │ ● bartowski/Mistral-7B-GGUF                              Q8_0 · 7,2 Go ⚠ │  "
"  │ ○ LFM2.5 350M — tient partout, même sans GPU                      0,35 B │  "
"  │ ○ Gemma 3 1B — petit modèle de Google                                1 B │  "
"  │ ○ Qwen3 1.7B — bon compromis sans GPU                              1,7 B │  "
"  │ ○ LFM2.5 2.6B — rapide sur matériel modeste                        2,6 B │  "
"  │ ○ Llama 3.2 3B Instruct — le petit Llama de Meta                     3 B │  "
"  │ ○ Qwen3 4B — polyvalent, ~3 Go en Q4_K_M                             4 B │  "
"  │ ○ Phi-4 mini Instruct — le petit Phi de Microsoft                  3,8 B │  "
"  │ ○ Qwen2.5 Coder 7B — orienté code                                    7 B │  "
"  │                                                                          │  "
"  │ Qwen3-0.6B-Q4_K_M.gguf · qwen3 · 40 960 tokens · 596 000 000 paramètres… │  "
"──│ Téléchargés ou non : un modèle local ne peut pas encore répondre (J33).  │──"
"  ╰───────────────────── Entrée télécharger · Suppr supprimer · Échap fermer ╯  "
"                                                                                "
" ● Prêt │ Ollama › llama3.2                         ↑↓ · Entrée · Suppr · Échap "
