src/ui/snapshots/chatatui__ui__tests__prompt_popup.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 90, 30).backend()"
---
"                                                                                          "
"        Explique-moi les lifetimes en Rust                                                "
"                                                                                          "
" ╭ Prompt envoyé au modèle ─────────────────────────────────────────────────────────────╮ "
" │ → Ollama › llama3.2  (local)                                                         │ "
" │ Prochaine requête, dans l'ordre. Une source de contexte (RAG) pourra y ajouter des   │ "
" │ extraits.                                                                            │ "
" │                                                                                      │ "
" │ ── system ≈ 23 tokens                                                                │ "
" │  You are a helpful assistant. Answer concisely and use Markdown when useful.         │ "
" │                                                                                      │ "
" │ ── user ≈ 13 tokens                                                                  │ "
" │  Explique-moi les lifetimes en Rust                                                  │ "
" │                                                                                      │ "
" │ ── assistant ≈ 48 tokens                                                             │ "
" │  ## Tri en Rust                                                                      │ "
" │                                                                                      │ "
" │  Utilise **`sort_unstable`** si l'ordre des égaux *n'importe pas* :                  │ "
" │                                                                                      │ "
" │  ```rust                                                                             │ "
" │  let mut v = vec![3, 1, 2];                                                          │ "
" │  v.sort_unstable();                                                                  │ "
" │  ```                                                                                 │ "
" │                                                                                      │ "
" │  - plus rapide                                                                       │ "
" │  - pas d'allocation                                                                  │ "
"─│                                                                                      │─"
" ╰──────────────────────────────────────────────────────────────────────── Échap fermer ╯ "
"                                                                                          "
" ● Prêt │ Ollama › llama3.2 │ ctx 3,4k/4,1k 83 % (/context)                  Échap fermer "
