src/ui/snapshots/chatatui__ui__tests__scrolled_up_shows_hint.snap
---
source: src/ui/mod.rs
expression: "draw(&mut app, 60, 12).backend()"
---
"                                                            "
"        Comment trier un Vec ?                              "
"                                                            "
"  Tri en Rust                                               "
"  ───────────                                               "
"                                                            "
"  Utilise sort_unstable si l'ordre des égaux n'importe      "
"  pas :                                          ↓ Ctrl+Fin "
"── Message ─────────────────────────────────────────────────"
"  Écrivez votre message…                                    "
"                                                            "
" ● Prêt │ Ollama › llama3.2 │ ctx ≈81  / commandes · Ctrl+P "
